[package]
name = "solana-fund"
version = "1.1.3"
description = "Solana Yield Farming Fund"
authors = ["Solana Maintainers <maintainers@solana.foundation>"]
repository = "https://github.com/solana-labs/solana-program-library/farms"
license = "Apache-2.0"
homepage = "https://solana.com/"
edition = "2021"

[features]
no-entrypoint = []
debug = []

[dependencies]
solana-farm-sdk = "1.1.3"
solana-program = "1.9.18"
solana-security-txt = "1.0.1"
spl-token = { version = "3.2.0", features = ["no-entrypoint"] }
num_enum = "0.5.7"

[dev-dependencies]
solana-program-test = "1.9.18"
solana-farm-client = "1.1.3"
solana-sdk = "1.9.18"
solana-cli-config = "1.9.18"
solana-logger = "1.9.18"
rand = "0.8.5"
log = "0.4.16"

[lib]
crate-type = ["cdylib", "lib"]

