[package]
name = "solana-farm-router-raydium"
version = "0.0.1"
description = "Solana Farm Raydium Router"
authors = ["Solana Maintainers <maintainers@solana.foundation>"]
repository = "https://github.com/solana-labs/solana-program-library"
license = "Apache-2.0"
homepage = "https://solana.com/"
edition = "2018"

[features]
no-entrypoint = []
debug = []

[dependencies]
solana-farm-sdk = { path = "../farm-sdk" }
solana-program = "1.9.2"
arrayref = "0.3.6"

[dev-dependencies]
solana-program-test = "1.9.2"

[lib]
crate-type = ["cdylib", "lib"]

