[package]
name = "solana-farm-router-saber"
version = "0.0.1"
description = "Solana Farm Saber Router"
authors = ["Solana Maintainers <maintainers@solana.foundation>"]
repository = "https://github.com/solana-labs/solana-program-library"
license = "Apache-2.0"
homepage = "https://solana.com/"
edition = "2018"

[features]
no-entrypoint = []
debug = []

[dependencies]
solana-farm-sdk = { path = "../farm-sdk" }
solana-program = "1.9.5"
arrayref = "0.3.6"
stable-swap-client = "1.5.2"
quarry-mine = { version = "1.10.0", features = ["no-entrypoint"] }
quarry-mint-wrapper = { version = "1.10.0", features = ["no-entrypoint"] }
quarry-redeemer = { version = "1.10.0", features = ["no-entrypoint"] }
spl-token = { version = "3.2.0", features = ["no-entrypoint"] }

[dev-dependencies]
solana-program-test = "1.9.5"

[lib]
crate-type = ["cdylib", "lib"]

