[package]
name = "solana-router-saber"
version = "1.1.3"
description = "Solana Saber Router"
authors = ["Solana Maintainers <maintainers@solana.foundation>"]
repository = "https://github.com/solana-labs/solana-program-library/farms"
license = "Apache-2.0"
homepage = "https://solana.com/"
edition = "2021"

[features]
no-entrypoint = []
debug = []

[dependencies]
solana-farm-sdk = "1.1.3"
solana-program = "1.9.18"
solana-security-txt = "1.0.1"
arrayref = "0.3.6"
stable-swap-client = "1.8.1"
quarry-mine = { version = "5.0.2", features = ["no-entrypoint"] }
quarry-mint-wrapper = { version = "5.0.2", features = ["no-entrypoint"] }
quarry-redeemer = { version = "5.0.2", features = ["no-entrypoint"] }
spl-token = { version = "3.2.0", features = ["no-entrypoint"] }

[dev-dependencies]
solana-program-test = "1.9.18"

[lib]
crate-type = ["cdylib", "lib"]

